[gd_scene load_steps=13 format=3 uid="uid://brjf80vt8yjyu"]

[ext_resource type="Script" path="res://scenes/stage/stage.gd" id="1_gekk2"]
[ext_resource type="Theme" uid="uid://8awncr10kw81" path="res://styles/dark_theme.tres" id="2_hsi7u"]
[ext_resource type="Texture2D" uid="uid://cbdrwyxdt2ook" path="res://assets/icons/house-bold-svgrepo-com.svg" id="3_3eevu"]
[ext_resource type="Texture2D" uid="uid://cr543j8pmsdcb" path="res://assets/icons/pause-svgrepo-com.svg" id="4_jn85g"]
[ext_resource type="Script" path="res://scenes/stage/ui/note_feedback_label.gd" id="5_d55w2"]
[ext_resource type="Script" path="res://test/beat_measure_label.gd" id="6_hh5kk"]
[ext_resource type="Script" path="res://scenes/stage/ui/song_duration_bar.gd" id="7_0p0tw"]
[ext_resource type="Script" path="res://test/time_elapsed_label.gd" id="8_yqo5f"]
[ext_resource type="Script" path="res://scenes/stage/ui/results/results_handler.gd" id="9_atlba"]
[ext_resource type="PackedScene" uid="uid://dbcpcm0ua5g8p" path="res://scenes/transition/transition.tscn" id="10_tbjj8"]
[ext_resource type="PackedScene" uid="uid://cjmw7flxngjsm" path="res://scenes/note_lane/grouped_note_lanes.tscn" id="11_juws2"]
[ext_resource type="PackedScene" uid="uid://ieks0tgggfiu" path="res://scenes/song_manager/song_manager.tscn" id="12_ixr3u"]

[node name="Stage" type="Node2D"]
process_mode = 3
script = ExtResource("1_gekk2")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_hsi7u")

[node name="Background" type="Panel" parent="UI"]
modulate = Color(1, 1, 1, 0.376471)
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
theme_type_variation = &"StageBackground"

[node name="Button" type="Button" parent="UI"]
process_mode = 3
z_index = 1
z_as_relative = false
layout_mode = 0
offset_left = 1216.0
offset_right = 1280.0
offset_bottom = 64.0
focus_mode = 0
icon = ExtResource("3_3eevu")
flat = true
expand_icon = true

[node name="PauseButton" type="Button" parent="UI"]
process_mode = 3
z_index = 1
z_as_relative = false
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
focus_mode = 0
icon = ExtResource("4_jn85g")
flat = true
expand_icon = true

[node name="NoteFeedbackLabel" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_left = 448.0
offset_top = 256.0
offset_right = 856.0
offset_bottom = 384.0
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_d55w2")

[node name="VisibilityTimer" type="Timer" parent="UI/NoteFeedbackLabel"]
wait_time = 1.5
one_shot = true

[node name="BeatMeasureLabel" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_left = 272.0
offset_top = 640.0
offset_right = 464.0
offset_bottom = 689.0
text = "Current Beat: 0
Measures Occured: 0"
script = ExtResource("6_hh5kk")

[node name="SongDurationBar" type="ProgressBar" parent="UI"]
visible = false
layout_mode = 0
offset_right = 1280.0
offset_bottom = 16.0
show_percentage = false
script = ExtResource("7_0p0tw")

[node name="TimeElapsedLabel" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_left = 464.0
offset_top = 640.0
offset_right = 632.0
offset_bottom = 696.0
text = "TIme Elapsed: 0"
script = ExtResource("8_yqo5f")

[node name="Results" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 384.0
offset_top = 64.0
offset_right = 896.0
offset_bottom = 640.0
script = ExtResource("9_atlba")

[node name="Results" type="Label" parent="UI/Results"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 512.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 40
text = "Results"

[node name="Perfect" type="Label" parent="UI/Results"]
layout_mode = 0
offset_left = 64.0
offset_top = 128.0
offset_right = 320.0
offset_bottom = 192.0
text = "Perfect: "
vertical_alignment = 1

[node name="PerfectResult" type="Label" parent="UI/Results/Perfect"]
layout_mode = 0
offset_left = 256.0
offset_right = 384.0
offset_bottom = 64.0
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Good" type="Label" parent="UI/Results"]
layout_mode = 0
offset_left = 64.0
offset_top = 192.0
offset_right = 320.0
offset_bottom = 256.0
text = "Good: "
vertical_alignment = 1

[node name="GoodResult" type="Label" parent="UI/Results/Good"]
layout_mode = 0
offset_left = 256.0
offset_right = 384.0
offset_bottom = 64.0
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Miss" type="Label" parent="UI/Results"]
layout_mode = 0
offset_left = 64.0
offset_top = 256.0
offset_right = 320.0
offset_bottom = 320.0
text = "Miss: "
vertical_alignment = 1

[node name="MissResult" type="Label" parent="UI/Results/Miss"]
layout_mode = 0
offset_left = 256.0
offset_right = 384.0
offset_bottom = 64.0
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HitRate" type="Label" parent="UI/Results"]
layout_mode = 0
offset_left = 64.0
offset_top = 448.0
offset_right = 288.0
offset_bottom = 512.0
text = "Hit Rate: "
vertical_alignment = 1

[node name="HitRatePercentResult" type="Label" parent="UI/Results/HitRate"]
layout_mode = 0
offset_left = 192.0
offset_right = 384.0
offset_bottom = 64.0
text = "12.00%"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HitRateIntegerResult" type="Label" parent="UI/Results/HitRate"]
layout_mode = 0
offset_left = 224.0
offset_top = 48.0
offset_right = 384.0
offset_bottom = 71.0
theme_override_font_sizes/font_size = 16
text = "4 / 4"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VisibilityTimer" type="Timer" parent="UI/Results"]
wait_time = 3.0
one_shot = true

[node name="Transition" parent="UI" instance=ExtResource("10_tbjj8")]
visible = false
layout_mode = 0

[node name="Label" type="Label" parent="UI"]
layout_mode = 0
offset_left = 560.0
offset_top = 416.0
offset_right = 738.0
offset_bottom = 461.0
text = "Pkpsc;asdsd"

[node name="NoteLanes" parent="." instance=ExtResource("11_juws2")]
position = Vector2(384, 0)
metadata/_edit_lock_ = true

[node name="SongManager" parent="." instance=ExtResource("12_ixr3u")]
file_path = "res://songs/official/0.4/gateway/gateway.msf"
in_editor = false
metadata/_edit_lock_ = true

[connection signal="pressed" from="UI/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="UI/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="timeout" from="UI/NoteFeedbackLabel/VisibilityTimer" to="UI/NoteFeedbackLabel" method="_on_visibility_timer_timeout"]
[connection signal="timeout" from="UI/Results/VisibilityTimer" to="UI/Results" method="_on_visiblity_timer_timeout"]
